--- a/assets/css/keyframe.css
+++ b/assets/css/keyframe.css
@@ -10,11 +10,13 @@
   transition: opacity .3s;
 }
 
-@keyframes spin_frames {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+/* 検索結果一覧 ローディングアニメーション */
+@keyframes sk-bouncedelay {
+  0%, 80%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  } 40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
 }
